# mervbot

./: .gitmodules  CMakeLists.txt  README.md
cfg/: MERVBot.INI
doc/: addendum.txt
src/: algorithms.cpp  algorithms.h  botdb.cpp  botdb.h  botdll.cpp  botdll.h  botinfo.cpp  botinfo.h  checksum.cpp  checksum.h  chunk.cpp  chunk.h  client.cpp  clientprot.cpp  clientprot.h  command.cpp  commtypes.cpp  commtypes.h  datatypes.cpp  datatypes.h  dllcore.cpp  dllcore.h  host.cpp  host.h  player.cpp  player.h  settings.h  sockets.cpp  sockets.h  system.cpp  system.h  test.cpp  windows_compat.cpp  windows_compat.h  winsock_compat.cpp  winsock_compat.h
